--- a/relatorio2/relatorio2.tex
+++ b/relatorio2/relatorio2.tex
@@ -147,18 +147,91 @@ Mostre que a corrente de saída tem, quando os transistores $M_3$, $M_4$ e $M_5$ 
     Juntando estes resultados e sabendo que $V_{S1} = 0 V$,
     \begin{eqnarray}
                     & MN     & = & e^{\frac{R \cdot \frac{I_S}{X} }{V_T}}
-        \Rightarrow & ln(MN) & = & \frac{R \cdot \frac{I_S}{X} }{V_T}
-        \therefore  & I_S    & = & X \cdot \frac{V_T}{V_T} \cdot ln(MN)
+        \Rightarrow & ln(MN) & = & \frac{R \cdot I_S}{X \cdot V_T}
+        \therefore  & I_S    & = & X \cdot \frac{V_T}{R} \cdot ln(MN)
     \end{eqnarray}
 
 
-\textbf{5.} *Considere os valores $M = 2$, $N = 1$ e $X = 1$. Determine através de equações os valores $\left( \frac{W}{L} \right)$ dos transistores e de $R$ para que
-    \begin{equation}
-        I_S = X \cdot \frac{V_T}{R} \cdot ln\left(M \cdot N\right)
-    \end{equation}
+\textbf{5.} *Considere os valores $M = 2$, $N = 1$ e $X = 1$. Determine através de equações os valores $(W/L)$ dos transistores e de $R$ para que
+        $I_S = 1,95 \mu A$ (valor fornecido pelo professor)
 O circuito deve funcionar para tensões na saída (dreno de $M_5$) tão altas quanto ($V_{DD} - 0,4 V$). Considere que $M_3$, $M_4$ e $M_5$ estão em forte inversão.
 
+    Utilizando o resultado do exercício anterior, os valores fornecidos de $M$, $N$ e $X$ e sabendo que $V_T = 26 mV V$, tem-se
+    \begin{eqnarray}
+        I_S & = & X \cdot \frac{V_T}{R} \cdot ln(M \cdot N) \\
+        1,95 \cdot 10^{-6} & = & 1 \cdot \frac{ 26 \cdot 10^{-3} }{R} \cdot ln(2 \cdot 1) \\
+        \Rightarrow R & = & \frac{ 26 \cdot 10^{-3} }{ 1,95 \cdot 10^{-6} } \cdot ln(2) \\
+        \therefore  R & = & 8,89 k \Omega
+    \end{eqnarray}
+
+    Considerando que os transistores $M_1$ e $M_2$ estão operando em fraca inversão
+    \begin{eqnarray}
+        LIM                  & < & 0,1 \\
+        \frac{I_D}{I_{Dlim}} & < & 0,1 \\
+    \end{eqnarray}
+    Sabendo que $(W/L)_1 = (W/L)_2$ devido a $N = 1$, e que a corrente no dreno dos transistores equivale a $\frac{I_S}{X}$,
+    \begin{equation}
+        \frac{I_S / X}{I_{Dlim}} < \frac{1}{10}
+    \end{equation}
+    Sendo $I_{Dlim} = \mu \cdot C_{ox} \cdot \left( \frac{W}{L} \right) \cdot 2 \cdot \left( n \cdot V_T \right)^2$
+    \begin{eqnarray}
+        \frac{I_S}{X} & < & \frac{ \mu_P \cdot C_{ox} \cdot (W/L)_2 \cdot 2 \cdot \left(n \cdot V_T\right)^2 }{10}
+        \Rightarrow (W/L)_2 & > & \frac{I_S \cdot 5}{X \cdot \mu_P \cdot C_{ox} \cdot \left(n \cdot V_T \right)^2}
+    \end{eqnarray}
+    Subistituindo os valores,
+    \begin{equation}
+        (W/L)_1 = (W/L)_2 > 1,50
+    \end{equation}
+
+    O transistor $M_5$ opera em forte inversão, logo
+    \begin{eqnarray}
+        LIM & > & 10
+        \frac{I_D}{I_{Dlim}} & > & 10
+        I_D = I_S & > & 10 \cdot I_{Dlim}
+        I_S & > & 10 \cdot \mu_P \cdot C_{ox} \cdot (W/L)_5 \cdot 2 \cdot \left(n \cdot V_T\right)^2
+        \Rightarrow (W/L)_5 & < & \frac{I_S}{20 \cdot \mu_P \cdot C_{ox} \cdot \left(n \cdot V_T\right)^2}
+    \end{eqnarray}
+    Como $X = 1$, $(W/L)_3 = (W/L)_5$, portanto
+    \begin{equation}
+        (W/L)_3 = (W/L)_5 < 8,43 \cdot 10^{-3}
+    \end{equation}
+
+    Como $M = 2$, $(W/L)_4 = M \cdot (W/L)_3$, então
+    \begin{equation}
+        (W/L)_4 < 16,87 \cdot 10^{-3}
+    \end{equation}
+
+    Para garantir que o transistor $M_5$ esteja na região de saturação,
+    \begin{eqnarray}
+        V_{GD}    & > & 0 \\
+        V_G - V_D & > & 0 \\
+    \end{eqnarray}
+    Como, no caso extremo $V_D = V_{DD} - 0,4 V$,
+    \begin{eqnarray}
+        V_G - (V_{DD} - 0,4) & > & 0 \\
+        V_G - V_{DD} & > & -0,4 \\
+        V_{DD} - V_G & < & 0,4 \\
+    \end{eqnarray}
+    Sabendo que $V_{DD} = V_S$,
+    \begin{equation}
+        V_S - V_G < 0,4
+    \end{equation}
+    Para utilizar o resultado numa equação conhecido, eleva-se ao quadrado
+    \begin{equation}
+        (V_S - V_G)^2 = (V_G - V_S)^2 = V{GS}^2 < 0,16
+    \end{equation}
+    Usando a equação da saturação,
+    \begin{eqnarray}
+        I_S & = & \mu \cdot C_{ox} \cdot (W/L)_5 \cdot V_{GS}^2 \\
+        \Rightarrow \left( \frac{W}{L} \right)_5 & = & \frac{I_S}{\mu \cdot C_{ox} \cdot V_{GS}^2} \\
+        \Rightarrow \left( \frac{W}{L} \right)_5 & > & \frac{I_S}{\mu \cdot C_{ox} \cdot 0,16} \\
+        \therefore \left( \frac{W}{L} \right)_5 & > & 1,82 \cdot 10^{-3} \\
+    \end{eqnarray}
+
+
 \textbf{6.} *Utilize as dimensões $L_1 = 1,0 \mu m$ e $L_3 = 2,0 \mu m$ para o comprimento de canal dos transistores $M_1$ e $M_3$. Quais são as dimensões de $L$ que devem ser utilizadas nos transistores $M_2$, $M_4$ e $M_5$. Por quê? Determine as dimensões da largura de canal $W$ de todos os transistores (mostre numa tabela as dimensões determinadas).
+
+    
 
 \textbf{7.} *Escreva o arquivo de entrada para simulação da fonte de corrente tomando cuidado em manter os transistores casados. Faça uma simulação do tipo DC variando $V_{DD}$ entre $0 V$ e $5 V$ (considere o dreno de $M_5$ em $0 V$). Medir as correntes que passam pelos transistores $M_4$ e $M_3$ para $V_{DD} = 3,0 V$. (verifique se a relação entre estas correntes esta dentro do esperado e se não estiver corrija). O que acontece com a corrente na saída quando aumentamos $V_{DD}$? Por quê?
 
