Correção em fórmulas

--- a/relatorio2/rel2.tex
+++ b/relatorio2/rel2.tex
@@ -161,9 +161,10 @@ O circuito deve funcionar para tensões na saída (dreno de $M_5$) tão altas quant
         I_S & = & X \cdot \frac{V_T}{R} \cdot ln(M \cdot N) \\
         1,95 \cdot 10^{-6} & = & 1 \cdot \frac{ 26 \cdot 10^{-3} }{R} \cdot ln(2 \cdot 1) \\
         \Rightarrow R & = & \frac{ 26 \cdot 10^{-3} }{ 1,95 \cdot 10^{-6} } \cdot ln(2) \\
-        \therefore  R & = & 9,xxx k \Omega % TODO colocar o valor
+        \therefore  R & = & 9,24 k \Omega
     \end{eqnarray}
 
+    % TODO atualizar os valores
     Considerando que os transistores $M_1$ e $M_2$ estão operando em fraca inversão
     \begin{eqnarray}
         LIM                  & < & 0,1 \\
