--- a/relatorio2/relatorio2.tex
+++ b/relatorio2/relatorio2.tex
@@ -27,11 +27,11 @@ Normalmente se verifica a região de operação do transistor analisando a corrente
         \label{tabIntroRegiaoOperacao}
         \centering
         \begin{tabular}{c|c}
-                                                            \hline
-            \textbf{Região de Operação} & \textbf{Condição} \hline
-                    Inversão Forte      &     $LIM > 10$    \hline
-                    Inversão Fraca      &     $LIM < 0,1$   \hline
-                    Inversão Moderada   & $0,1 < LIM < 10$  \hline
+                                                              \hline
+            \textbf{Região de Operação} & \textbf{Condição}\\ \hline
+                    Inversão Forte      &     $LIM > 10$   \\ \hline
+                    Inversão Fraca      &     $LIM < 0,1$  \\ \hline
+                    Inversão Moderada   & $0,1 < LIM < 10$ \\ \hline
         \end{tabular}
     \end{table}
 
@@ -39,11 +39,11 @@ Nesta tabela temos que $LIM = \frac{I_D}{I_{Dlim}} $ e $I_{Dlim} = \mu \cdot C_{
 onde $I_D$ é a corrente de dreno; $\mu$ é a mobilidade dos portadores do canal; $C_{ox}$ é a capacitância por área da porta; $W$ e $L$ são as dimensões do transistor; $n$ = fator de inclinação de inversão fraca (seu valor depende da tecnologia mas varia entre 1,2 e 1,6); e  .
 Para a inversão fraca, a equação que descreve a operação do transistor MOS é
     \begin{equation}
-        I_D = \frac{W}{L} \codt I_{D0} \cdot e^{V_G / n V_T} \cdot \left( e^{-V_S / V_T} - e^{-V_D / V_T} \right)
+        I_D = \frac{W}{L} \cdot I_{D0} \cdot e^{V_G / n V_T} \cdot \left( e^{-V_S / V_T} - e^{-V_D / V_T} \right)
     \end{equation}
 onde $V_G$, $V_S$ e $V_D$ são, respectivamente, as tensão de \emph{gate}, \emph{source} e dreno relativas ao \emph{bulk}; $I_{D0}$ é uma constante da tecnologia com dimensão de corrente. Em operação normal, $V_D \gg V_T$ e, neste caso, ficamos reduzidos a seguinte relação
     \begin{equation}
-        I_D = \frac{W}{L} \codt I_{D0} \cdot e^{V_G / n V_T} \cdot e^{-V_S / V_T}
+        I_D = \frac{W}{L} \cdot I_{D0} \cdot e^{V_G / n V_T} \cdot e^{-V_S / V_T}
     \end{equation}
 
   $I_D$ será, portanto, uma função exponencial de aproximadamente $V_{GS}$ (semelhante ao que ocorre em um transistor bipolar).
@@ -64,16 +64,16 @@ onde $V_G$, $V_S$ e $V_D$ são, respectivamente, as tensão de \emph{gate}, \emph{
 
     Como trata-se da região de inversão fraca, com $ V_D \gg V_S $, sabe-se que
         \begin{equation}
-            I_D = \frac{W}{L} \codt I_{D0} \cdot e^{V_G / n V_T} \cdot e^{-V_S / V_T}
+            I_D = \frac{W}{L} \cdot I_{D0} \cdot e^{V_G / n V_T} \cdot e^{-V_S / V_T}
         \end{equation}
     Tomando $n = 1$ e $g_m = \frac{\partial I_D}{\partial V_{GS}}$,
         \begin{eqnarray}
-            I_D & = & \frac{W}{L} \codt I_{D0} \cdot e^{V_G / V_T} \cdot e^{-V_S / V_T} \\
-            I_D & = & \frac{W}{L} \codt I_{D0} \cdot e^{ \frac{V_G - V_S}{V_T} } \\
-            I_D & = & \frac{W}{L} \codt I_{D0} \cdot e^{ \frac{V_{GS}}{V_T} } \label{eqnQ1correnteFraca} \\
-            \Rightarrow g_m & = & \frac{\partial \left( \frac{W}{L} \codt I_{D0} \cdot e^{ \frac{V_{GS}}{V_T} } \right) }{ \partial{V_{GS}} } \\
+            I_D & = & \frac{W}{L} \cdot I_{D0} \cdot e^{V_G / V_T} \cdot e^{-V_S / V_T} \\
+            I_D & = & \frac{W}{L} \cdot I_{D0} \cdot e^{ \frac{V_G - V_S}{V_T} } \\
+            I_D & = & \frac{W}{L} \cdot I_{D0} \cdot e^{ \frac{V_{GS}}{V_T} } \label{eqnQ1correnteFraca} \\
+            \Rightarrow g_m & = & \frac{\partial \left( \frac{W}{L} \cdot I_{D0} \cdot e^{ \frac{V_{GS}}{V_T} } \right) }{ \partial{V_{GS}} } \\
             \\
-            \therefore g_m & = & \frac{1}{V_T} \cdot \frac{W}{L} \codt I_{D0} \cdot e^{ \frac{V_{GS}}{V_T} } \label{eqnQ1resultado}
+            \therefore g_m & = & \frac{1}{V_T} \cdot \frac{W}{L} \cdot I_{D0} \cdot e^{ \frac{V_{GS}}{V_T} } \label{eqnQ1resultado}
         \end{eqnarray}
 
 
@@ -85,21 +85,21 @@ onde $V_G$, $V_S$ e $V_D$ são, respectivamente, as tensão de \emph{gate}, \emph{
         \end{equation}
     Utilizando esse resultado com o obtido no exercício anterior (equação \ref{eqnQ1resultado}), tem-se
         \begin{eqnarray}
-            g_m & = & \frac{W}{L} \codt \frac{I_{D0}}{V_T} \cdot e^{ \frac{ V_T \cdot ln \left( \frac{I_D}{(W/L) \cdot I_{D0}} \right) }{V_T} } \\
-            \Rightarrow g_m & = & \frac{W}{L} \codt \frac{I_{D0}}{V_T} \cdot \left( \frac{I_D}{(W/L) \cdot I_{D0}} \right) } \\
+            g_m & = & \frac{W}{L} \cdot \frac{I_{D0}}{V_T} \cdot e^{ \frac{ V_T \cdot ln \left( \frac{I_D}{(W/L) \cdot I_{D0}} \right) }{V_T} } \\
+            \Rightarrow g_m & = & \frac{W}{L} \cdot \frac{I_{D0}}{V_T} \cdot \left( \frac{I_D}{(W/L) \cdot I_{D0}} \right) \\
             \Rightarrow g_m & = & \frac{I_D}{V_T}
         \end{eqnarray}
-    Considerando a corrente como $I_{Dlim}$, tem-se
+    Considerando a corrente como $I_{Dlim}$, tem-se:
         \begin{eqnarray}
-            I_{D} = & I_Dlim & = & \mu \cdot C_{ox} \cdot \frac{W}{L} \cdot 2 \cdot V_T^2 \\
-            \Rightarrow & g_m & = & \frac{\mu \cdot C_{ox} \cdot \frac{W}{L} \cdot 2 \cdot V_T^2}{V_T} \\
-            \Rightarrow & g_m & = & \sqrt[2]{\left( \mu \cdot C_{ox} \cdot \frac{W}{L} \cdot 2 \cdot V_T \right)^2}
-            \Rightarrow & g_m & = & \sqrt[2]{\left( \mu \cdot C_{ox} \cdot \frac{W}{L} \cdot 2 \cdot V_T^2 \right) \cdot \left( \mu \cdot C_{ox} \cdot \frac{W}{L} \cdot 2 \right) }
-            \Rightarrow & g_m & = & \sqrt[2]{ I_D \cdot \left( \mu \cdot C_{ox} \cdot \frac{W}{L} \cdot 2 \right) }
+            I_{D} = I_{Dlim} & = & \mu \cdot C_{ox} \cdot \frac{W}{L} \cdot 2 \cdot V_T^2 \\
+            \Rightarrow  g_m & = & \frac{\mu \cdot C_{ox} \cdot \frac{W}{L} \cdot 2 \cdot V_T^2}{V_T} \\
+            \Rightarrow  g_m & = & \sqrt[2]{\left( \mu \cdot C_{ox} \cdot \frac{W}{L} \cdot 2 \cdot V_T \right)^2 } \\
+            \Rightarrow  g_m & = & \sqrt[2]{\left( \mu \cdot C_{ox} \cdot \frac{W}{L} \cdot 2 \cdot V_T^2 \right) \cdot \left( \mu \cdot C_{ox} \cdot \frac{W}{L} \cdot 2 \right) } \\
+            \Rightarrow  g_m & = & \sqrt[2]{ I_D \cdot \left( \mu \cdot C_{ox} \cdot \frac{W}{L} \cdot 2 \right) }
         \end{eqnarray}
     Reajeitando a expressão, pode-se observar que as equações de $g_m$ para os casos de inversão forte e fraca coincidem.
         \begin{equation}
-            \therefore & g_m & = & \sqrt[2]{ 2 \cdot I_D \cdot \mu \cdot C_{ox} \cdot \frac{W}{L} }
+            \therefore g_m = \sqrt[2]{ 2 \cdot I_D \cdot \mu \cdot C_{ox} \cdot \frac{W}{L} }
         \end{equation}
 
 
@@ -115,7 +115,7 @@ onde $V_G$, $V_S$ e $V_D$ são, respectivamente, as tensão de \emph{gate}, \emph{
     \textbf{3.5} Compare a impedância de saída das duas configurações. Qual é maior?
     \textbf{3.5} Qual a desvantagem do espelho de Wilson?
 
-    \img{a)Espelho de corrente convencional; b)Espelho de corrente Wilson}{imagQ03espelhos}{FILE.jpg} % XXX
+    %\img{a)Espelho de corrente convencional; b)Espelho de corrente Wilson}{imagQ03espelhos}{} % XXX
 
 \textbf{4.} *Considere o circuito da figura abaixo (Fig. \ref{imagQ04gerCorrenteRef}). Este circuito é formado pelo espelho de corrente $M_3$, $M_4$ e $M_5$ e os transistores trabalhando em fraca inversão $M_1$ e $M_2$. Ele serve para gerar uma corrente de referência $I_S$. Considere que
     -- $\left( \frac{W}{L}_{M_4} \right)$ é \textbf{M} vezes maior que $\left( \frac{W}{L}_{M_3} \right)$;
@@ -126,7 +126,7 @@ Mostre que a corrente de saída tem, quando os transistores $M_3$, $M_4$ e $M_5$ 
         I_S = X \cdot \frac{V_T}{R} \cdot ln\left(M \cdot N\right)
     \end{equation}
 
-    \img{Circuito gerador de corrente de referência.}{imagQ04gerCorrenteRef}{FILE.jpg} % XXX
+    %\img{Circuito gerador de corrente de referência.}{imagQ04gerCorrenteRef}{} % XXX
 
     Devido ao espelho de corrente formado pelos transistores $M_3$ e $M_4$, e suas relações de tamanho, tem-se que a relação das correntes de $M_1$ e $M_2$ é M, desta forma
     \begin{eqnarray}
@@ -135,10 +135,10 @@ Mostre que a corrente de saída tem, quando os transistores $M_3$, $M_4$ e $M_5$ 
     \end{eqnarray}
     Pela relação de tamanho de $M_1$ e $M_2$ e sabendo que $V_{G1} = V_{G2}$,
     \begin{eqnarray}
-        & \frac{(W/L)_2}{(W/L)_1} & = & N \\
-        & M & = & \frac{I_1}{I_2} = \frac{(W/L)_1}{(W/L)_2} \cdot \frac{e^{-V_{S1} / V_T}}{e^{-V_{S2} / V_T}} \\
-        \Rightarrow & M & = & \frac{1}{N} \cdot e^{\frac{\left( V_{S2} - V_{S1} \right)}{V_T}} \\
-        \Rightarrow & MN & = & e^{\frac{\left( V_{S2} - V_{S1} \right)}{V_T}} \\
+        \frac{(W/L)_2}{(W/L)_1} & = & N \\
+        M & = & \frac{I_1}{I_2} = \frac{(W/L)_1}{(W/L)_2} \cdot \frac{e^{-V_{S1} / V_T}}{e^{-V_{S2} / V_T}} \\
+        \Rightarrow M & = & \frac{1}{N} \cdot e^{\frac{\left( V_{S2} - V_{S1} \right)}{V_T}} \\
+        \Rightarrow MN & = & e^{\frac{\left( V_{S2} - V_{S1} \right)}{V_T}} 
     \end{eqnarray}
     Como $I_{M3} = I_{M2}$ e $I_S = X \cdot I_{M3}$,
     \begin{equation}
@@ -146,9 +146,9 @@ Mostre que a corrente de saída tem, quando os transistores $M_3$, $M_4$ e $M_5$ 
     \end{equation}
     Juntando estes resultados e sabendo que $V_{S1} = 0 V$,
     \begin{eqnarray}
-                    & MN     & = & e^{\frac{R \cdot \frac{I_S}{X} }{V_T}}
-        \Rightarrow & ln(MN) & = & \frac{R \cdot I_S}{X \cdot V_T}
-        \therefore  & I_S    & = & X \cdot \frac{V_T}{R} \cdot ln(MN)
+                    MN     & = & e^{\frac{R \cdot \frac{I_S}{X} }{V_T}} \\
+        \Rightarrow ln(MN) & = & \frac{R \cdot I_S}{X \cdot V_T} \\
+        \therefore  I_S    & = & X \cdot \frac{V_T}{R} \cdot ln(MN)
     \end{eqnarray}
 
 
@@ -161,22 +161,23 @@ O circuito deve funcionar para tensões na saída (dreno de $M_5$) tão altas quant
         I_S & = & X \cdot \frac{V_T}{R} \cdot ln(M \cdot N) \\
         1,95 \cdot 10^{-6} & = & 1 \cdot \frac{ 26 \cdot 10^{-3} }{R} \cdot ln(2 \cdot 1) \\
         \Rightarrow R & = & \frac{ 26 \cdot 10^{-3} }{ 1,95 \cdot 10^{-6} } \cdot ln(2) \\
-        \therefore  R & = & 8,89 k \Omega
+        \therefore  R & = & 9,24 k \Omega
     \end{eqnarray}
 
+    % TODO atualizar os valores
     Considerando que os transistores $M_1$ e $M_2$ estão operando em fraca inversão
     \begin{eqnarray}
         LIM                  & < & 0,1 \\
         \frac{I_D}{I_{Dlim}} & < & 0,1 \\
     \end{eqnarray}
-    Sabendo que $(W/L)_1 = (W/L)_2$ devido a $N = 1$, e que a corrente no dreno dos transistores equivale a $\frac{I_S}{X}$,
+    Sabendo que $(W/L)_1 = (W/L)_2$ devido a $N = 1$, e que a corrente no dreno do transistore $M_1$ equivale a $M \cdot \frac{I_S}{X}$,
     \begin{equation}
-        \frac{I_S / X}{I_{Dlim}} < \frac{1}{10}
+        M \cdot \frac{I_S / X}{I_{Dlim}} < \frac{1}{10}
     \end{equation}
     Sendo $I_{Dlim} = \mu \cdot C_{ox} \cdot \left( \frac{W}{L} \right) \cdot 2 \cdot \left( n \cdot V_T \right)^2$
     \begin{eqnarray}
-        \frac{I_S}{X} & < & \frac{ \mu_P \cdot C_{ox} \cdot (W/L)_2 \cdot 2 \cdot \left(n \cdot V_T\right)^2 }{10}
-        \Rightarrow (W/L)_2 & > & \frac{I_S \cdot 5}{X \cdot \mu_P \cdot C_{ox} \cdot \left(n \cdot V_T \right)^2}
+        M \cdot \frac{I_S}{X} & < & \frac{ \mu_P \cdot C_{ox} \cdot (W/L)_2 \cdot 2 \cdot \left(n \cdot V_T\right)^2 }{10} \\
+        \Rightarrow (W/L)_2 & > & \frac{M \cdot I_S \cdot 5}{X \cdot \mu_P \cdot C_{ox} \cdot \left(n \cdot V_T \right)^2}
     \end{eqnarray}
     Subistituindo os valores,
     \begin{equation}
@@ -185,10 +186,10 @@ O circuito deve funcionar para tensões na saída (dreno de $M_5$) tão altas quant
 
     O transistor $M_5$ opera em forte inversão, logo
     \begin{eqnarray}
-        LIM & > & 10
-        \frac{I_D}{I_{Dlim}} & > & 10
-        I_D = I_S & > & 10 \cdot I_{Dlim}
-        I_S & > & 10 \cdot \mu_P \cdot C_{ox} \cdot (W/L)_5 \cdot 2 \cdot \left(n \cdot V_T\right)^2
+        LIM & > & 10 \\
+        \frac{I_D}{I_{Dlim}} & > & 10 \\
+        I_D = I_S & > & 10 \cdot I_{Dlim} \\
+        I_S & > & 10 \cdot \mu_P \cdot C_{ox} \cdot (W/L)_5 \cdot 2 \cdot \left(n \cdot V_T\right)^2 \\
         \Rightarrow (W/L)_5 & < & \frac{I_S}{20 \cdot \mu_P \cdot C_{ox} \cdot \left(n \cdot V_T\right)^2}
     \end{eqnarray}
     Como $X = 1$, $(W/L)_3 = (W/L)_5$, portanto
@@ -222,16 +223,16 @@ O circuito deve funcionar para tensões na saída (dreno de $M_5$) tão altas quant
     \end{equation}
     Usando a equação da saturação,
     \begin{eqnarray}
-        I_S & = & \mu \cdot C_{ox} \cdot (W/L)_5 \cdot V_{GS}^2 \\
-        \Rightarrow \left( \frac{W}{L} \right)_5 & = & \frac{I_S}{\mu \cdot C_{ox} \cdot V_{GS}^2} \\
-        \Rightarrow \left( \frac{W}{L} \right)_5 & > & \frac{I_S}{\mu \cdot C_{ox} \cdot 0,16} \\
+        I_S & = & \mu \cdot C_{ox} \cdot (W/L)_5 \cdot \frac{V_{GS}^2}{2} \\
+        \Rightarrow \left( \frac{W}{L} \right)_5 & = & \frac{2 \cdot I_S}{\mu \cdot C_{ox} \cdot V_{GS}^2} \\
+        \Rightarrow \left( \frac{W}{L} \right)_5 & > & \frac{2 \cdot I_S}{\mu \cdot C_{ox} \cdot 0,16} \\
         \therefore \left( \frac{W}{L} \right)_5 & > & 1,82 \cdot 10^{-3} \\
     \end{eqnarray}
 
 
 \textbf{6.} *Utilize as dimensões $L_1 = 1,0 \mu m$ e $L_3 = 2,0 \mu m$ para o comprimento de canal dos transistores $M_1$ e $M_3$. Quais são as dimensões de $L$ que devem ser utilizadas nos transistores $M_2$, $M_4$ e $M_5$. Por quê? Determine as dimensões da largura de canal $W$ de todos os transistores (mostre numa tabela as dimensões determinadas).
 
-    
+
 
 \textbf{7.} *Escreva o arquivo de entrada para simulação da fonte de corrente tomando cuidado em manter os transistores casados. Faça uma simulação do tipo DC variando $V_{DD}$ entre $0 V$ e $5 V$ (considere o dreno de $M_5$ em $0 V$). Medir as correntes que passam pelos transistores $M_4$ e $M_3$ para $V_{DD} = 3,0 V$. (verifique se a relação entre estas correntes esta dentro do esperado e se não estiver corrija). O que acontece com a corrente na saída quando aumentamos $V_{DD}$? Por quê?
 
@@ -286,20 +287,19 @@ Obs.: O extrator gera a linha do resistor erradamente. O resistor deve ser um su
 O modelo VERT10 encontra-se no fim do material.
 Grandezas PTAT (Proportional To Absolute Temperature), como a corrente da fonte de corrente, e CTAT (Complementary To Absolute Temperature), como o VBE de um bipolar, podem ser utilizadas para gerar um sinal independente da temperatura. Para isto basta somá-las, cada uma multiplicada por um coeficiente de ajuste, de forma que as variações com a temperatura se cancelem, como mostra a Figura \ref{imagQ24somaPTATeCTAT}.
 
-    \img{Soma de grandezas PTAT e CTAT.}{imagQ24somaPTATeCTAT}{FILE.jpg} % XXX
+    %\img{Soma de grandezas PTAT e CTAT.}{imagQ24somaPTATeCTAT} % XXX
 
 Um circuito que realiza semelhante soma é apresentado na Figura \ref{imagQ24fonteTensaoReferencia}.
 
-    \img{Fonte de tensão de referência.}{imagQ24fonteTensaoReferencia}{FILE.jpg} % XXX
+    %\img{Fonte de tensão de referência.}{imagQ24fonteTensaoReferencia} % XXX
 
 Nela podemos ver que:
-  -- a tensão de saída é igual a soma entre a tensão em $R_2$, ($I_R \cdot R_2$) que é PTAT, e a tensão $V_BE$ do transistor;
+  -- a tensão de saída é igual a soma entre a tensão em $R_2$, ($I_R \cdot R_2$) que é PTAT, e a tensão $V_{BE}$ do transistor;
   -- o valor de $R_2$ serve para ajustar a relação entre essas duas tensões.
 
-\textbf{25.} *Projete uma fonte de tensão de referencia similar a da Figura \ref{imagQ24fonteTensaoReferencia} mas utilize a fonte de corrente que você projetou (questão 15). Na fonte de tensão faça com que a corrente do bipolar seja igual à corrente que passa pelo resistor $R_1$ (Figura \ref{imagQ24fonteTensaoReferencia}). O valor de $R_2$ deve ser ajustado para que Coeficiente de Temperatura* seja inferior a 50 ppm/ºC, para a temperaturas variando entre -10ºC e 100ºC. Apresente o esquemático do circuito completo, as dimensões dos transistores e os valores dos resistores. Apresente também o gráfico VREF x Temperatura.
-*Coeficiente de Temperatura (partes por milhão por graus Celsius);
-    $V_MAX$ = Máximo valor de $V_REF$ para t \in [-10ºC, 100ºC]
-    $V_MIN$ = Mínimo valor de $V_REF$ para t \in [-10ºC, 100ºC]
+\textbf{25.} *Projete uma fonte de tensão de referencia similar a da Figura \ref{imagQ24fonteTensaoReferencia} mas utilize a fonte de corrente que você projetou (questão 15). Na fonte de tensão faça com que a corrente do bipolar seja igual à corrente que passa pelo resistor $R_1$ (Figura \ref{imagQ24fonteTensaoReferencia}). O valor de $R_2$ deve ser ajustado para que Coeficiente de Temperatura\footnote{Coeficiente de Temperatura: parte por milhão por grau Celsius} seja inferior a 50 ppm/ºC, para a temperaturas variando entre -10ºC e 100ºC. Apresente o esquemático do circuito completo, as dimensões dos transistores e os valores dos resistores. Apresente também o gráfico VREF x Temperatura.\\
+    $V_MAX$ = Máximo valor de $V_REF$ para $t \in [-10ºC, 100ºC]$\\
+    $V_MIN$ = Mínimo valor de $V_REF$ para $t \in [-10ºC, 100ºC]$
     \begin{equation}
         Coeficiente de Temperatura = \frac{V_MAX - V_MIN}{V_REF} \cdot \frac{1}{100 - \left(-10\right)} \cdot 10^6
     \end{equation}
@@ -321,7 +321,7 @@ Obs.:   U0 é a mobilidade inicial e tem unidade de $cm^2$/($V \cdot s$);
             $\varepsilon_{ox} = 3,5 x 10^{-13} F/cm$
 
 
-
+\begin{verbatim}
 .MODEL MODN NMOS LEVEL=53 MODTYPE=ELDO
 *
 * ----------------------------------------------------------------------
@@ -369,5 +369,5 @@ Obs.:   U0 é a mobilidade inicial e tem unidade de $cm^2$/($V \cdot s$);
 *        *** Substrate current related model parameters ***
 +ALPHA0 =0.000e+00 BETA0  =3.000e+01
 
-
+\end{verbatim}
 \end{document}
