--- a/relatorio2/relatorio2.tex
+++ b/relatorio2/relatorio2.tex
@@ -26,7 +26,7 @@ Normalmente se verifica a região de operação do transistor analisando a corrente
         \caption{Critério para determinar a região de operação do transistor.}
         \label{tabIntroRegiaoOperacao}
         \centering
-        \begin{tabular}{c|c}
+        \begin{tabular}{|c|c|}
                                                               \hline
             \textbf{Região de Operação} & \textbf{Condição}\\ \hline
                     Inversão Forte      &     $LIM > 10$   \\ \hline
@@ -232,7 +232,34 @@ O circuito deve funcionar para tensões na saída (dreno de $M_5$) tão altas quant
 
 \textbf{6.} *Utilize as dimensões $L_1 = 1,0 \mu m$ e $L_3 = 2,0 \mu m$ para o comprimento de canal dos transistores $M_1$ e $M_3$. Quais são as dimensões de $L$ que devem ser utilizadas nos transistores $M_2$, $M_4$ e $M_5$. Por quê? Determine as dimensões da largura de canal $W$ de todos os transistores (mostre numa tabela as dimensões determinadas).
 
+    Usualmente, mantém-se todos os transistores de mesmo tipo (i.e. ou PMOS, ou NMOS) com a mesma largura 
+    de canal $L$. Isto permite um melhor funcionamento dos espelhos de corrente, além de facilitar a 
+    construção do \emph{layout}. Sendo assim, temos:
+    \begin{eqnarray}
+        L_1 = L_2 = 1 \mu m\\
+        L_3 = L_4 = L_5 = 2 \mu m
+    \end{eqnarray}
 
+    As dimensões $W$ e $L$ utilizadas no projeto do gerador de corrente de referência estão descritas na
+    tabela \ref{tblQ06WLDosTransistores}. Como pode ser visto na tabela, o transistor $M_4$ foi dividido
+    em dois transistores -- $M_{4.1}$ e $M_{4.2}$ -- de mesma largura. Desta forma mantém-se todos os
+    transistores \emph{PMOS} casados.
+
+    \begin{table}[!hp]
+        \begin{tabular}{|l|c|c|}
+                                                            \hline
+            Transistor  &   W($\mu m$)  &   L($\mu m$)  \\  \hline
+            $M_1$       &       91.1    &       1       \\  \hline
+            $M_2$       &       91.1    &       1       \\  \hline
+            $M_3$       &       1.65    &       2       \\  \hline
+            $M_{4.1}$   &       1.65    &       2       \\  \hline
+            $M_{4.2}$   &       1.65    &       2       \\  \hline
+            $M_5$       &       1.65    &       2       \\  \hline
+        \end{tabular}
+        \caption{Dimensões $W$ e $L$ tomadas para os transistores da figura \ref{imagQ04gerCorrenteRef}.
+                    \label{tblQ06WLDosTransistores}
+                }
+    \end{table}
 
 \textbf{7.} *Escreva o arquivo de entrada para simulação da fonte de corrente tomando cuidado em manter os transistores casados. Faça uma simulação do tipo DC variando $V_{DD}$ entre $0 V$ e $5 V$ (considere o dreno de $M_5$ em $0 V$). Medir as correntes que passam pelos transistores $M_4$ e $M_3$ para $V_{DD} = 3,0 V$. (verifique se a relação entre estas correntes esta dentro do esperado e se não estiver corrija). O que acontece com a corrente na saída quando aumentamos $V_{DD}$? Por quê?
 
