--- a/relatorio2/relatorio2.tex
+++ b/relatorio2/relatorio2.tex
@@ -261,11 +261,18 @@ O circuito deve funcionar para tensões na saída (dreno de $M_5$) tão altas quant
                 }
     \end{table}
 
-\textbf{7.} *Escreva o arquivo de entrada para simulação da fonte de corrente tomando cuidado em manter os transistores casados. Faça uma simulação do tipo DC variando $V_{DD}$ entre $0 V$ e $5 V$ (considere o dreno de $M_5$ em $0 V$). Medir as correntes que passam pelos transistores $M_4$ e $M_3$ para $V_{DD} = 3,0 V$. (verifique se a relação entre estas correntes esta dentro do esperado e se não estiver corrija). O que acontece com a corrente na saída quando aumentamos $V_{DD}$? Por quê?
+\textbf{7.} *Escreva o arquivo de entrada para simulação da fonte de corrente tomando cuidado em manter 
+os transistores casados. Faça uma simulação do tipo DC variando $V_{DD}$ entre $0 V$ e $5 V$ (considere 
+o dreno de $M_5$ em $0 V$). Medir as correntes que passam pelos transistores $M_4$ e $M_3$ para $V_{DD} 
+= 3,0 V$. (verifique se a relação entre estas correntes esta dentro do esperado e se não estiver corrija).
+O que acontece com a corrente na saída quando aumentamos $V_{DD}$? Por quê?
 
-\textbf{8.} *Ajuste o valor de $R$ para que a corrente de saída em $V_{DD} = 3,0 V$ seja a desejada no projeto (valor nominal). Apresente então o gráfico $I_S x V_{DD}$.
+\textbf{8.} *Ajuste o valor de $R$ para que a corrente de saída em $V_{DD} = 3,0 V$ seja a desejada no 
+projeto (valor nominal). Apresente então o gráfico $I_S x V_{DD}$.
 
-\textbf{9.} *Determine a faixa de valores de $V_{DD}$ para a qual a condição $I_0 \left(0,98\right) < I_S < I_0 \left(1,02\right)$ seja observada, onde $I_0$ é a corrente para $V_{DD} = 3,0 V$. Qual é o valor mínimo de $V_{DD}$ achado?
+\textbf{9.} *Determine a faixa de valores de $V_{DD}$ para a qual a condição $I_0 \left(0,98\right) <
+I_S < I_0 \left(1,02\right)$ seja observada, onde $I_0$ é a corrente para $V_{DD} = 3,0 V$. Qual é o valor 
+mínimo de $V_{DD}$ achado?
 Chamaremos a faixa de tensão encontrada acima de faixa de operação do circuito para variações de $\pm 2\%$.
 
 \textbf{10.} *Caso desejemos ter pequenas variações de corrente mesmo para uma ampla variação da tensão de alimentação, quais modificações podem ser realizadas no projeto?
