Mais questões resolvidas

--- a/relatorio2/relatorio2.tex
+++ b/relatorio2/relatorio2.tex
@@ -59,7 +59,7 @@ onde $V_G$, $V_S$ e $V_D$ são, respectivamente, as tensão de \emph{gate}, \emph{
     \begin{equation}
         g_m = \frac{ I_D }{ n \cdot V_T \cdot \sqrt[2]{1 + LIM} }
     \end{equation}
-    Determine o valor de $g_m$ para o transistor operando na região de fraca inversão com $V_D >> V_T$ e $n = 1$.
+    Determine o valor de $g_m$ para o transistor operando na região de fraca inversão com $V_D \gg V_T$ e $n = 1$.
     Obs.: $g_m = \frac{\partial I_D}{\partial V_{GS}}$
 
     Como trata-se da região de inversão fraca, com $ V_D \gg V_S $, sabe-se que
@@ -115,7 +115,8 @@ onde $V_G$, $V_S$ e $V_D$ são, respectivamente, as tensão de \emph{gate}, \emph{
     \textbf{3.5} Compare a impedância de saída das duas configurações. Qual é maior? \\
     \textbf{3.5} Qual a desvantagem do espelho de Wilson? \\
 
-    %\img{a)Espelho de corrente convencional; b)Espelho de corrente Wilson}{imagQ03espelhos}{} % XXX
+    \img{a)Espelho de corrente convencional; b)Espelho de corrente Wilson}{imagQ03espelhos}{imagQ03espelhos}
+
 
 \textbf{4.} *Considere o circuito da figura abaixo (Fig. \ref{imagQ04gerCorrenteRef}). Este circuito é formado pelo espelho de corrente $M_3$, $M_4$ e $M_5$ e os transistores trabalhando em fraca inversão $M_1$ e $M_2$. Ele serve para gerar uma corrente de referência $I_S$. Considere que
     -- $\left( \frac{W}{L}_{M_4} \right)$ é \textbf{M} vezes maior que $\left( \frac{W}{L}_{M_3} \right)$;
@@ -126,7 +127,7 @@ Mostre que a corrente de saída tem, quando os transistores $M_3$, $M_4$ e $M_5$ 
         I_S = X \cdot \frac{V_T}{R} \cdot ln\left(M \cdot N\right)
     \end{equation}
 
-    %\img{Circuito gerador de corrente de referência.}{imagQ04gerCorrenteRef}{} % XXX
+    \img{Circuito gerador de corrente de referência.}{imagQ04gerCorrenteRef}{imagQ04gerCorrenteRef}
 
     Devido ao espelho de corrente formado pelos transistores $M_3$ e $M_4$, e suas relações de tamanho, tem-se que a relação das correntes de $M_1$ e $M_2$ é M, desta forma
     \begin{eqnarray}
@@ -260,32 +261,58 @@ O circuito deve funcionar para tensões na saída (dreno de $M_5$) tão altas quant
         \end{tabular}
     \end{table}
 
+
 \textbf{7.} *Escreva o arquivo de entrada para simulação da fonte de corrente tomando cuidado em manter os transistores casados. Faça uma simulação do tipo DC variando $V_{DD}$ entre $0 V$ e $5 V$ (considere o dreno de $M_5$ em $0 V$). Medir as correntes que passam pelos transistores $M_4$ e $M_3$ para $V_{DD} = 3,0 V$. (verifique se a relação entre estas correntes esta dentro do esperado e se não estiver corrija). O que acontece com a corrente na saída quando aumentamos $V_{DD}$? Por quê?
 
     O código do programa que realiza a simulação está descrito em Código Fonte \ref{cfQ07circuito}.
 
 \begin{lstlisting}[caption=Arquivo da simulação para análise das relações entre corrente, label=cfQ07circuito]
-    % TODO
+Gerador de Corrente de Referencia
+
+*parametros transistores p.
+.param wp=1.65um pdp='wp+2*0.85um' adp='wp*0.85um' psp='wp+2*1.75um' asp='wp*1.75um'
+
+M3  GP  GP VDD VDD MODP w=wp l=2um Ad=adp Pd=pdp As=asp Ps=psp
+M41 GN  GP VDD VDD MODP w=wp l=2um Ad=adp Pd=pdp As=asp Ps=psp
+M42 GN  GP VDD VDD MODP w=wp l=2um Ad=adp Pd=pdp As=asp Ps=psp
+M5  OUT GP VDD VDD MODP w=wp l=2um Ad=adp Pd=pdp As=asp Ps=psp
+
+*parametros transistores n.
+.param wn=91.1um pdn='wn+2*0.85um' adn='wn*0.85um' psn='wn+2*1.75um' asn='wn*1.75um'
+
+M1 GN GN VSS VSS MODN w=wn l=1um Ad=adn Pd=pdn As=asn Ps=psn
+M2 GP GN X   VSS MODN w=wn l=1um Ad=adn Pd=pdn As=asn Ps=psn
+
+R1 X VSS 9.24kOhm
+
+Vd VDD 0 3V
+Vs VSS 0 0V
+.CONNECT OUT VSS
+
+.DC VD 0V 5V 0.1
+
+.PROBE DC Is(M5) Is(M41) Is(M42) Is(M3) Id(M1) Id(M2)
+
+.include "~/para_prova/tipico.mod"
 \end{lstlisting}
 
     Como é possível notar através da Figura \ref{imagQ07relacaoEntreCorrentes}, a relação entre as correntes está próxima do esperado, dado que a corrente que passa em $M_4$ é aproximadamente 2 vezes maior que a corrente que passa em $M_3$, obedecendo a relação do espelho de corrente.
 
-    %\img{Relações entre correntes de $M_4$ e $M_3$.}{imagQ07relacaoEntreCorrentes} % XXX
+    \img{Relações entre correntes de $M_4$ e $M_3$.}{imagQ07relacaoEntreCorrentes}{imagQ07relacaoEntreCorrentes}
 
 
 \textbf{8.} *Ajuste o valor de $R$ para que a corrente de saída em $V_{DD} = 3,0 V$ seja a desejada no projeto (valor nominal). Apresente então o gráfico $I_S x V_{DD}$.
 
     Foi feita uma análise, varrendo o valor da resistência entre $9 k \Omega$ e $15 k \Omega$, e foi deterinado que o valor de $R$ que melhor se ajusta para obter-se $I_S = 1,95 \mu A$ foi $R = 12,86 k \Omega$, assim como demonstra a Figura \ref{imagQ08varreduraDaResistencia}.
 
-    %\img{Corrente X Resistência.}{imagQ08varreduraDaResistencia} % XXX
+    \img{Corrente X Resistência.}{imagQ08varreduraDaResistencia}{imagQ08varreduraDaResistencia}
 
     Utilizando um valor de $R = 12,86 k \Omega$, o gráfico de $I_S x V_{DD}$ obtido está representado na Figura \ref{imagQ08correntePorTensao}.
 
-    %\img{Corrente $$I_S X Tensão $V_{DD}$.}{imagQ08correntePorTensao} % XXX
+    \img{Corrente $I_S$ X Tensão $V_{DD}$.}{imagQ08correntePorTensao}{imagQ08correntePorTensao}
 
 
-\textbf{9.} *Determine a faixa de valores de $V_{DD}$ para a qual a condição $I_0 \left(0,98\right) < I_S < I_0 \left(1,02\right)$ seja observada, onde $I_0$ é a corrente para $V_{DD} = 3,0 V$. Qual é o valor mínimo de $V_{DD}$ achado?
->>>>>>> 75b1bb7f6bb4e03fad5e90d5895b7ab73cd3faf3
+\textbf{9.} *Determine a faixa de valores de $V_{DD}$ para a qual a condição $I_0 \left(0,98\right) < I_S < I_0 \left(1,02\right)$ seja observada, onde $I_0$ é a corrente para $V_{DD} = 3,0 V$. Qual é o valor mínimo de $V_{DD}$ achado? \\
 Chamaremos a faixa de tensão encontrada acima de faixa de operação do circuito para variações de $\pm 2\%$.
 
     O esperado é que a corrente na saída esteja entre os valores \\
@@ -294,7 +321,7 @@ dado que o valor ideal seria $I_S = 1,95 \mu A$.
 
     Analisando a Figura \ref{imagQ09faixaDeTensao}, obtem-se que a faixa de valores de tensão que obedecem a condição desejada é $2,8 V < V_{DD} < 3,2 V$.
 
-    %\img{Faixa de tensão adequada.}{imagQ09faixaDeTensao} % XXX
+    \img{Faixa de tensão adequada.}{imagQ09faixaDeTensao}{imagQ09faixaDeTensao}
 
 
 \textbf{10.} *Caso desejemos ter pequenas variações de corrente mesmo para uma ampla variação da tensão de alimentação, quais modificações podem ser realizadas no projeto?
@@ -306,66 +333,106 @@ dado que o valor ideal seria $I_S = 1,95 \mu A$.
 
     O novo circuito projetado é o que está representado na Figura \ref{imagQ11novoCircuito}.
 
-    %\img{Circuito reprojetado}{imagQ11novoCircuito} % TODO
+    \img{Circuito reprojetado}{imagQ11novoCircuito}{imagQ11novoCircuito}
 
     Neste novo circuito, foi adicionado um espelho de corrente de Wilson nos transistores N e aumentado o tamanho dos transistores P. A melhor solução seria aumentar o tamanho de todos os transistores e também utilizar dois espelhos de Wilson, porém aumentar o tamanho dos transistores N não seria uma boa ideia, já que eles já são bastante grandes. Utilizar dois espelhos de Wilson também não é uma boa solução por elevar demais a tensão mínima de funcionamento do circuito.
 
     O valor da resistência foi reajustado para $10,88 k \Omega$. O gráfico de $I_S x V_{DD}$ está representado na Figura \ref{imagQ11correntePorTensao}
 
-    %\img{Corrente $I_S$ X Tensão $V_{DD}$}{imagQ11correntePorTensao} % TODO
+    \img{Corrente $I_S$ X Tensão $V_{DD}$}{imagQ11correntePorTensao}{imagQ11correntePorTensao}
 
 
-\textbf{12.} *Alguns circuitos analógicos necessitam de um circuito de start-up para começarem a funcionar (por exemplo, fontes de corrente, osciladores, etc.). Verifique por simulação se a fonte de corrente necessita de um start-up (considere algumas tensões iniciais nos nós do circuito e verifique, através de simulação de transitório, se o circuito vai ou não para o ponto de operação correto). Caso haja alguma condição inicial em que o circuito não funcione, apresente figura da simulação. Qual comando deve ser utilizado para impor condições iniciais, \emph{.IC} ou \emph{.NODESET}?
+\textbf{12.} *Alguns circuitos analógicos necessitam de um circuito de \emph{start-up} para começarem a funcionar (por exemplo, fontes de corrente, osciladores, etc.). Verifique por simulação se a fonte de corrente necessita de um \emph{start-up} (considere algumas tensões iniciais nos nós do circuito e verifique, através de simulação de transitório, se o circuito vai ou não para o ponto de operação correto). Caso haja alguma condição inicial em que o circuito não funcione, apresente figura da simulação. Qual comando deve ser utilizado para impor condições iniciais, \textbf{.IC} ou \textbf{.NODESET}?
+
+    O comando a ser utilizado é o \textbf{.IC}. % TODO discorrer mais sobre - teórica
+    Na condição inicial em que a tensão no \emph{gate} dos transistores $M_6$ e $M_7$ equivale a $0 V$, o circuito não volta a funcionar, assim como demonstra a Figura \ref{} % XXX mudar o nome dos transistores
+
+    % TODO terminar
+
+    %\img{}{}{} % XXX
+    %\img{}{}{} % XXX
+
 
 \textbf{13.} Ajustar o valor de $R$ para que a corrente em $M_5$ tenha o valor nominal desejado quando $V_{DD} = 3,0 V$.
 
+
 \textbf{14.} *Como deve ser desenhado o resistor (verificar no manual ENG-183\_rev3.pdf como é feita a definição de um resistor)? Qual material é adequado para construí-lo?
 
-\textbf{15.} *Fazer a fonte de corrente (esquemático, símbolo com a localização do \emph{layout}, \emph{layout}, verificações, LVS, etc.). Observe que:
-    \textbf{a.} para gerar automaticamente o \emph{layout} use o \emph{viewpoint}. Caso seja usado o esquemático os resistores não serão criados;
-    \textbf{b.} tomar cuidado para garantir o melhor casamento entre os transistores $M_3$, $M_4$ e $M_5$; também cuidar do casamento entre os transistores $M_1$ e $M_2$.
+    % TODO teórica
+
+
+\textbf{15.} *Fazer a fonte de corrente (esquemático, símbolo com a localização do \emph{layout}, \emph{layout}, verificações, LVS, etc.). Observe que: \\
+    \textbf{a.} para gerar automaticamente o \emph{layout} use o \emph{viewpoint}. Caso seja usado o esquemático os resistores não serão criados; \\
+    \textbf{b.} tomar cuidado para garantir o melhor casamento entre os transistores $M_3$, $M_4$ e $M_5$; também cuidar do casamento entre os transistores $M_1$ e $M_2$. \\
 Quais são as dimensões do circuito completo (utilizar o comando \textbf{ \emph{Report -- Windows} } do \emph{ICSTATION})? Apresente o \emph{layout} do circuito.
 
-\textbf{16.} *Extrair o circuito do \emph{layout} e determinar:
-    \textbf{a.} corrente de saída para $V_{DD} = 3,0 V$ (usar modelo típico);
-    \textbf{b.} com simulação Monte Carlos, ao menos 200 simulações, traçar o gráfico número de resultados X corrente de saída em $V_{DD} = 3,0 V$. Ache o valor médio;
-    \textbf{c.} Para $V_{DD} = 3,0 V$, qual é a máxima tensão que podemos aplicar na saída e a fonte continuar funcionando (considere que quando a corrente variou 2\%, deixou de funcionar).
+    O resultado do \emph{layout} do circuito está representado na Figura \ref{imagQ15layoutCircuito}. \\
+    As dimensões do circuito são $114,218 \mu m$ por $40,472 \mu m$, o que resulta em uma área do circuito de $4.622,631 \mu m^2$. % Pontos (-13.593, 187.291), (100.625, 227.763)
+
+    \img{\emph{Layout} do circuito fonte de corrente}{imagQ15layoutCircuito}{imagQ15layoutCircuito}
+
+
+\textbf{16.} *Extrair o circuito do \emph{layout} e determinar: \\
+    \textbf{a.} corrente de saída para $V_{DD} = 3,0 V$ (usar modelo típico); \\
+    \textbf{b.} com simulação Monte Carlo, ao menos 200 simulações, traçar o gráfico número de resultados X corrente de saída em $V_{DD} = 3,0 V$. Ache o valor médio; \\
+    \textbf{c.} Para $V_{DD} = 3,0 V$, qual é a máxima tensão que podemos aplicar na saída e a fonte continuar funcionando (considere que quando a corrente variou 2\%, deixou de funcionar). \\
 Obs.: O extrator gera a linha do resistor erradamente. O resistor deve ser um subcircuito. Acrescente X no inicio da linha gerada para o resistor. Adicionalmente deve ser acrescentado ao arquivo de simulação o modelo do resistor que se encontra em /local/tools/dkit/ams\_3.70/c35/eldo/restm.mod.
 
-\textbf{17.} *Realize a simulação DC do circuito com a temperatura variando de -20ºC até 100ºC, em passos de 5,0ºC ($V_{DD} = 3,0 V$). Abaixo há um exemplo de como devem ficar os comandos:
+    A corrente de saída obtida, para $V_{DD} = 3,0 V$, é de $1,95 \mu A$, assim como mostra a Figura \ref{imagQ16correnteSaida}.
+    Os resultados obtidos através da simulação Monte Carlo estão respresentados a Figura \ref{imagQ16histMonteCarlo}, onde o valor médio é $1,95 \mu m$. % XXX verificar a corretudo do valor médio
+
+    Ao analisar o gráfico da Figura \ref{imagQ16} %% TODO terminar essa questão
+
+    \img{Corrente de saída do circuito}{imagQ16correnteSaida}{imagQ16correnteSaida}
+    \img{Histograma da corrente de saída quando $V_{DD} = 3,0 V$}{imagQ16histMonteCarlo}{imagQ16histMonteCarlo}
+
+
+\textbf{17.} *Realize a simulação DC do circuito com a temperatura variando de -20ºC até 100ºC, em passos de 5,0ºC ($V_{DD} = 3,0 V$). Abaixo há um exemplo de como devem ficar os comandos: \\
+\begin{verbatim}
     .option precise
     .DC temp -30 120 10
     .probe DC Id(Mp1)
+\end{verbatim}
+
 
 \textbf{18.} *Apresente a curva $I_S$ x Temperatura e determine os valores extremos da corrente. Compare a dependência teórica de IS com a temperatura e os resultados?
 
+
 \textbf{19.} *Vamos determinar a influência de ruídos da tensão de alimentação na corrente de saída. Para isso podemos utilizar simulações do tipo AC. O que faz uma simulação dessas?
 
-\textbf{20.} *Aplique um sinal AC na tensão de alimentação e faça uma simulação AC de 1,0 KHz a 100 MHz analisando 10 pontos por década (ver comando .AC). Abaixo há um exemplo de como devem ficar os comandos:
+
+\textbf{20.} *Aplique um sinal AC na tensão de alimentação e faça uma simulação AC de 1,0 KHz a 100 MHz analisando 10 pontos por década (ver comando .AC). Abaixo há um exemplo de como devem ficar os comandos: \\
+\begin{verbatim}
     Vd  vd  0  3V AC 1
     .AC DEC 10 1K 10MEG
     .probe  AC Id(Mn4) Vd(5) v(6)
+\end{verbatim}
+
 
 \textbf{21.} *Apresente o gráfico $I_S$ (em dB) x freqüência (em escala logarítmica)(mostre os comando do ELDO utilizados). Caso se deseje que o ruído na saída se mantenha inferior 1\% da corrente nominal, para um ruído de 0,1 V na fonte de alimentação, qual a máxima freqüência que o ruído pode ter?
 
+
 \textbf{22.} *Caso a fonte de alimentação apresente ruídos acima de 0,1 V em freqüências acima da permitida, qual providência simples pode ser tomada para reduzi-los?
 
+
 \textbf{23.} *Tecnologias CMOS são desenvolvidas para fornecer transistores MOS, NMOS e PMOS. Apesar disso, não raramente são também disponibilizados transistores bipolares. Verfique os transistores bipolares LAT2 e Vert10 fornecidos pela AMS, manual ENG-183. Que tipo de transistores são (NPN ou PNP) e por que são chamados de lateral, LAT2, e vertical, VERT10?
+
 
 \textbf{24.} *Verifique o comportamento do transistor VERT10 com a temperatura. Para isso conecte o emissor dele a uma fonte de corrente (valor de corrente igual ao que você usou no projeto), a base e coletor ao terra e faça. Apresente o gráfico VBE x Temperatura. A declaração do transistor é:
     Qname coletor base emissor VERT10
 O modelo VERT10 encontra-se no fim do material.
 Grandezas PTAT (Proportional To Absolute Temperature), como a corrente da fonte de corrente, e CTAT (Complementary To Absolute Temperature), como o VBE de um bipolar, podem ser utilizadas para gerar um sinal independente da temperatura. Para isto basta somá-las, cada uma multiplicada por um coeficiente de ajuste, de forma que as variações com a temperatura se cancelem, como mostra a Figura \ref{imagQ24somaPTATeCTAT}.
 
-    %\img{Soma de grandezas PTAT e CTAT.}{imagQ24somaPTATeCTAT} % XXX
+    \img{Soma de grandezas PTAT e CTAT.}{imagQ24somaPTATeCTAT}{imagQ24somaPTATeCTAT} 
 
 Um circuito que realiza semelhante soma é apresentado na Figura \ref{imagQ24fonteTensaoReferencia}.
 
-    %\img{Fonte de tensão de referência.}{imagQ24fonteTensaoReferencia} % XXX
+    \img{Fonte de tensão de referência.}{imagQ24fonteTensaoReferencia}{imagQ24fonteTensaoReferencia}
 
 Nela podemos ver que:
   -- a tensão de saída é igual a soma entre a tensão em $R_2$, ($I_R \cdot R_2$) que é PTAT, e a tensão $V_{BE}$ do transistor;
   -- o valor de $R_2$ serve para ajustar a relação entre essas duas tensões.
+
 
 \textbf{25.} *Projete uma fonte de tensão de referencia similar a da Figura \ref{imagQ24fonteTensaoReferencia} mas utilize a fonte de corrente que você projetou (questão 15). Na fonte de tensão faça com que a corrente do bipolar seja igual à corrente que passa pelo resistor $R_1$ (Figura \ref{imagQ24fonteTensaoReferencia}). O valor de $R_2$ deve ser ajustado para que Coeficiente de Temperatura\footnote{Coeficiente de Temperatura: parte por milhão por grau Celsius} seja inferior a 50 ppm/ºC, para a temperaturas variando entre -10ºC e 100ºC. Apresente o esquemático do circuito completo, as dimensões dos transistores e os valores dos resistores. Apresente também o gráfico VREF x Temperatura.\\
     $V_MAX$ = Máximo valor de $V_REF$ para $t \in [-10ºC, 100ºC]$\\
@@ -379,6 +446,7 @@ Obs.: Caso a tensão de saída esteja variando muito com a temperatura, reajuste o
 
 \textbf{26.} *Desenhe o \emph{layout} da fonte de tensão completa. Utilize o transistor vertical PRIMLAB/VERT10 da biblioteca. Ajuste o comprimento de $R_2$ no \emph{layout} para que o coeficiente de temperatura do circuito esxtraído se mantenha abaixo de 50 ppm/ºC.
 Obs.: o transistor bipolar extraído vem com o parâmetro Area. Apague este parâmetro senão ficará errado.
+
 
 \textbf{27.} *Adicione ao \emph{layout Pads} de $V_{DD}$ e GND. Passar o DRC para verificar se tudo está correto. Quais são as dimensões do circuito com os \emph{Pads}? Apresente o \emph{layout} do circuito e o gráfico $V_REF$ x Temperatura para valores de $V_{DD}$ de 2,0 V, 2,5 V e 3,0V.
 Obs.: um bloco de \emph{Pad} pode ser encontrado na biblioteca IOLIB\_4M, célula g-padonly.
@@ -440,4 +508,5 @@ Obs.:   U0 é a mobilidade inicial e tem unidade de $cm^2$/($V \cdot s$);
 +ALPHA0 =0.000e+00 BETA0  =3.000e+01
 
 \end{verbatim}
+
 \end{document}
